# obs_controller

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/obs_controller/: __init__.py  controller.py  exceptions.py
src/obs_controller/profiles/obs_controller/: basic.ini
