[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obs_controller"
version = "1.1.2"
authors = [
  { name="Mathias Tokerød" }
]

maintainers = [
  { name="Mathias Tokerød" }
]

description = "A controller for OBS Studio. Uses the OBS websocket."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "obs-websocket-py==1.0",
    "psutil==5.9.8",
    "websocket-client==1.7.0",
    "pywin32==306"
]

[project.urls]
Repository = "https://github.com/mathiascn/obs_controller"
Changelog =  "https://github.com/mathiascn/obs_controller/CHANGELOG.md"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ini"]